# ClossANN

./: .gitignore  .gitmodules  CMakeLists.txt  InsterestingSeeds.md  InterestingSeeds.md  README.md  TODO.md
app/: CMakeLists.txt
app/eyecandy/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
app/eyecandy/libs/: UseColumnResizer.cmake  UseFastCppCsvParser.cmake  UseQtAwesome.cmake
app/eyecandy/logic/: uihandler.cpp  uihandler.h
app/eyecandy/models/: layerdescmodel.cpp  layerdescmodel.h  learnparam.cpp  learnparam.h  learntask.cpp  learntask.h  recordsmodel.cpp  recordsmodel.h  ucwdataset.cpp  ucwdataset.h
app/eyecandy/res/: Bridge.qml  Chart.qml  main.qml  qml.qrc
app/eyecandy/res/html/: index.html  test.html
app/eyecandy/res/html/css/: main.css
app/eyecandy/res/html/js/: main.js
app/eyecandy/res/html/js/highcharts/: highcharts.js
app/eyecandy/utils/: awesomeiconprovider.cpp  awesomeiconprovider.h  dyncsvreader.cpp  dyncsvreader.h  logger.cpp  logger.h  utils.cpp  utils.h
app/eyecandy/widgets/: flowlayout.cpp  flowlayout.h  layerdelegate.cpp  layerdelegate.h  loglistline.cpp  loglistline.h  loglistwidget.cpp  loglistwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/twospirals/: CMakeLists.txt  CreateTwoSpiralsDataSet.h  TwoSpiralsVisualization.cpp  TwoSpiralsVisualization.h  twospirals.cpp
app/xor/: CMakeLists.txt  main.cpp
cmake/: FindALGLIB.cmake  FindEigen3.cmake  FindOpenANN.cmake  FindQCustomPlot.cmake  Utilities.cmake
src/: BPLayer.cpp  BPLayer.h  BPOutputLayer.cpp  BPOutputLayer.h  CMakeLists.txt  ClossNet.cpp  ClossNet.h  InterruptableLMA.cpp  InterruptableLMA.h  main.cpp
